<resources>
    <string name="app_name">PreferenciasCompartidas</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="chekbox">Recordar</string>
    <string name="btn_iniciar_Sesion">Iniciar Sesion</string>
    <string name="error_password_invalido">Contraseña inválida</string>
    <string name="error_campo_requerido">Este campo es requerido</string>
    <string name="error_email_invalido">Correo inválido</string>
</resources>